--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ethers": "^5.6.6",
     "framer-motion": "^6.3.3",
     "next": "12.1.6",
+    "next-cookies": "^2.0.3",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1"
