--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next-cookies": "^2.0.3",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "wait": "^0.4.2"
   },
   "devDependencies": {
     "@types/node": "^17.0.35",
