--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
     "ethers": "^5.6.6",
     "framer-motion": "^6.3.3",
     "next": "12.1.6",
+    "next-auth": "^4.3.4",
     "next-cookies": "^2.0.3",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
+    "siwe": "^1.1.6",
+    "wagmi": "^0.4.3",
     "wait": "^0.4.2"
   },
   "devDependencies": {
     "@types/node": "^17.0.35",
     "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "typescript": "^4.7.2"
   }
 }
