--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "12.1.6",
     "next-auth": "^4.3.4",
     "next-cookies": "^2.0.3",
+    "nodemailer": "^6.7.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
