--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-, "pages/_app.js", "pages/_app.js"  ],
+, "pages/_app.js", "pages/_app.js", "pages/siwe"  ],
   "exclude": [
     "node_modules"
   ]
